--- a/config/database.yml
+++ b/config/database.yml
@@ -20,7 +20,7 @@ development:
   database: report_presenter_development
   pool: 5
   username: report_presenter
-  password:
+  password: rp789456
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -49,7 +49,7 @@ test:
   database: report_presenter_test
   pool: 5
   username: report_presenter
-  password:
+  password: rp789456
 
 production:
   adapter: postgresql
@@ -57,4 +57,4 @@ production:
   database: report_presenter_production
   pool: 5
   username: report_presenter
-  password:
+  password: rp789456
